# Minescript-Miner

./: .gitignore  LICENSE  MANIFEST.in  README.md  aim_config.txt  benchmark_pipeline_timings.py  geometry_catalog_check.py  miner-test.py  miner.py  pyproject.toml  record_scan_fixtures.py  setup.py  shape_catalog_check.py  shape_fixture_check.py  shape_fixture_overlay.py  targets.txt
aim/: player_aim.py
catalog/: shape_catalog.json
native/: GEOMETRY_INVARIANTS.md
scripts/: build-gcd-benchmark.sh  build-manylinux.sh  build-native-performance-profile.sh  build-native-profile.sh  run-performance-report.sh  run-random-scan-benchmark.sh  run-tests.sh
tests/: native_build_support.py  test_acquire_current_target.py  test_aim.py  test_benchmark_pipeline_timings.py  test_build_minescript_bundle.py  test_generated_catalog.py  test_geometry_catalog.py  test_miner.py  test_minescript_io.py  test_minescript_runtime.py  test_native_branch_bound.py  test_native_clipping.py  test_native_constraint_region.py  test_native_constraint_subtraction.py  test_native_exact_branch_bound.py  test_native_exact_geometry.py  test_native_exact_projection.py  test_native_geometry.py  test_native_geometry_regressions.py  test_native_projection.py  test_native_random_scan_pipeline.py  test_native_scan_pipeline.py  test_native_wheel.py  test_pruned_cube_blocks.py  test_queries.py  test_record_scan_fixtures.py  test_shape_catalog.py  test_shape_fixture_check.py  test_vendored_boost.py
tools/: build_minescript_bundle.py  generate_shape_catalog.py  make_target_pruning_fixture.py  performance_report.py  (+4 more)
(+132 files in other folders)
