[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minescript-miner"
version = "0.1.0"
description = "Visibility scanning helpers for Minescript."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

[tool.cibuildwheel]
build = "cp39-*"
skip = "*-musllinux_*"
test-command = "python -c \"import _minescript_miner_native as native; import minescript_miner; assert native.hello() == minescript_miner.hello() == 'hello from native extension'; assert minescript_miner.geometry_catalog_debug()['version'] == 1; assert native.acquire_target((0.5, 64.5, 0.5), (90.0, 10.0), 1, 3, 4.8, [0] * 27, []) is None\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
before-build = "yum install -y boost-devel"
